--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="email_hint">Email</string>
     <string name="asignaturas_hint">Asignaturas</string>
     <string name="add_placeholder">Add</string>
+    <string name="identificador_hint">Identificador</string>
 </resources>
